--- a/.classpath
+++ b/.classpath
@@ -1,15 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="src" path="ui"/>
+	<classpathentry excluding=".gitignore|build.xml" kind="src" path="api"/>
+	<classpathentry excluding=".gitignore|build.xml" kind="src" path="components"/>
 	<classpathentry kind="src" path="i18n"/>
-	<classpathentry kind="src" path="test"/>
-	<classpathentry kind="src" path="api"/>
-	<classpathentry kind="src" path="components"/>
-	<classpathentry kind="src" path="util"/>
 	<classpathentry kind="src" path="installer"/>
+	<classpathentry kind="src" path="test"/>
+	<classpathentry excluding=".gitignore|build.xml" kind="src" path="ui"/>
+	<classpathentry excluding=".gitignore|build.xml" kind="src" path="util"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/J2SE-1.5"/>
 	<classpathentry kind="lib" path="lib/h2small-1.3.154.jar"/>
 	<classpathentry kind="lib" path="lib/guice-3.0-no_aop.jar"/>
 	<classpathentry kind="lib" path="lib/javax.inject-1.jar"/>
+	<classpathentry kind="lib" path="lib/test/junit-4.9b2.jar"/>
+	<classpathentry kind="lib" path="lib/test/hamcrest-core-1.1.jar"/>
+	<classpathentry kind="lib" path="lib/test/hamcrest-library-1.1.jar"/>
+	<classpathentry kind="lib" path="lib/test/jmock-2.5.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
