--- a/test/build.xml
+++ b/test/build.xml
@@ -13,7 +13,8 @@
 				<path refid='test-classes'/>
 				<path refid='util-classes'/>
 			</classpath>
-			<test name='net.sf.briar.i18n.FontManagerImplTest'/>
+			<test name='net.sf.briar.i18n.FontManagerTest'/>
+			<test name='net.sf.briar.i18n.I18nTest'/>
 			<test name='net.sf.briar.invitation.InvitationWorkerTest'/>
 			<test name='net.sf.briar.setup.SetupWorkerTest'/>
 			<test name='net.sf.briar.util.FileUtilsTest'/>
