--- a/test/build.xml
+++ b/test/build.xml
@@ -15,6 +15,8 @@
 			</classpath>
 			<test name='net.sf.briar.db.DatabaseCleanerImplTest'/>
 			<test name='net.sf.briar.db.H2DatabaseTest'/>
+			<test name='net.sf.briar.db.ReadWriteLockDatabaseComponentTest'/>
+			<test name='net.sf.briar.db.SynchronizedDatabaseComponentTest'/>
 			<test name='net.sf.briar.i18n.FontManagerTest'/>
 			<test name='net.sf.briar.i18n.I18nTest'/>
 			<test name='net.sf.briar.invitation.InvitationWorkerTest'/>
