Cleaned up serial and protocol packages in preparation for user-defined types.

--- a/test/build.xml
+++ b/test/build.xml
@@ -21,7 +21,7 @@
 			<test name='net.sf.briar.i18n.I18nTest'/>
 			<test name='net.sf.briar.invitation.InvitationWorkerTest'/>
 			<test name='net.sf.briar.protocol.BundleReadWriteTest'/>
-			<test name='net.sf.briar.protocol.SigningStreamTest'/>
+			<test name='net.sf.briar.protocol.ConsumersTest'/>
 			<test name='net.sf.briar.serial.ReaderImplTest'/>
 			<test name='net.sf.briar.serial.WriterImplTest'/>
 			<test name='net.sf.briar.setup.SetupWorkerTest'/>
