Implemented PacketReader, renamed Packet{Reader,Writer}Factory in the protocol component to Protocol{Reader,Writer}Factory.

--- a/test/build.xml
+++ b/test/build.xml
@@ -37,6 +37,7 @@
 			<test name='net.sf.briar.transport.PacketDecrypterImplTest'/>
 			<test name='net.sf.briar.transport.PacketEncrypterImplTest'/>
 			<test name='net.sf.briar.transport.PacketWriterImplTest'/>
+			<test name='net.sf.briar.transport.TagDecoderTest'/>
 			<test name='net.sf.briar.transport.TagEncoderTest'/>
 			<test name='net.sf.briar.util.FileUtilsTest'/>
 			<test name='net.sf.briar.util.StringUtilsTest'/>
