Lock fairness test: check that fair ReentrantReadWriteLocks don't allow writers to starve. If this test passes on Java 5 and 6, we can get rid of SynchronizedDatabaseComponent and merge ReadWriteLockDatabaseComponent with DatabaseComponentImpl.

--- a/test/build.xml
+++ b/test/build.xml
@@ -14,6 +14,7 @@
 				<path refid='util-classes'/>
 			</classpath>
 			<test name='net.sf.briar.FileReadWriteTest'/>
+			<test name='net.sf.briar.LockFairnessTest'/>
 			<test name='net.sf.briar.crypto.CounterModeTest'/>
 			<test name='net.sf.briar.db.BasicH2Test'/>
 			<test name='net.sf.briar.db.DatabaseCleanerImplTest'/>
