Frame the encrypted data independently of inter-packet boundaries and authenticate each frame before parsing its contents. Each connection starts with a tag, followed by any number of frames, each starting with the frame number (32 bits) and payload length (16 bits), and ending with a MAC (256 bits).
Tags have the following format: 32 bits reserved, 16 bits for the
transport ID, 32 bits for the connection number, 32 bits (set to zero
in the tag) for the frame number, and 16 bits (set to zero in the tag)
for the block number. The tag is encrypted with the tag key in
ECB mode.

Frame numbers for each connection must start from zero and must be
contiguous and strictly increasing. Each frame is encrypted with the
frame key in CTR mode, using the plaintext tag with the appropriate
frame number to initialise the counter.

The maximum frame size is 64 KiB, including header and footer. The
maximum amount of data that can be sent over a connection is 2^32
frames - roughly 2^48 bytes, or 8 terabytes, with the maximum frame
size of 64 KiB. If that isn't sufficient we can add another 16 bits to
the frame counter.

--- a/test/build.xml
+++ b/test/build.xml
@@ -36,15 +36,14 @@
 			<test name='net.sf.briar.serial.ReaderImplTest'/>
 			<test name='net.sf.briar.serial.WriterImplTest'/>
 			<test name='net.sf.briar.setup.SetupWorkerTest'/>
+			<test name='net.sf.briar.transport.ConnectionDecrypterImplTest'/>
+			<test name='net.sf.briar.transport.ConnectionEncrypterImplTest'/>
+			<test name='net.sf.briar.transport.ConnectionReaderImplTest'/>
 			<test name='net.sf.briar.transport.ConnectionRecogniserImplTest'/>
 			<test name='net.sf.briar.transport.ConnectionWindowImplTest'/>
-			<test name='net.sf.briar.transport.PacketDecrypterImplTest'/>
-			<test name='net.sf.briar.transport.PacketEncrypterImplTest'/>
-			<test name='net.sf.briar.transport.PacketReaderImplTest'/>
-			<test name='net.sf.briar.transport.PacketReadWriteTest'/>
-			<test name='net.sf.briar.transport.PacketWriterImplTest'/>
-			<test name='net.sf.briar.transport.TagDecoderTest'/>
-			<test name='net.sf.briar.transport.TagEncoderTest'/>
+			<test name='net.sf.briar.transport.ConnectionWriterImplTest'/>
+			<test name='net.sf.briar.transport.FrameReadWriteTest'/>
+			<test name='net.sf.briar.util.ByteUtilsTest'/>
 			<test name='net.sf.briar.util.FileUtilsTest'/>
 			<test name='net.sf.briar.util.StringUtilsTest'/>
 			<test name='net.sf.briar.util.ZipUtilsTest'/>
