--- a/test/build.xml
+++ b/test/build.xml
@@ -44,6 +44,7 @@
 			<test name='net.sf.briar.transport.ConnectionWriterTest'/>
 			<test name='net.sf.briar.transport.FrameReadWriteTest'/>
 			<test name='net.sf.briar.transport.PaddedConnectionWriterTest'/>
+			<test name='net.sf.briar.transport.batch.BatchConnectionReadWriteTest'/>
 			<test name='net.sf.briar.util.ByteUtilsTest'/>
 			<test name='net.sf.briar.util.FileUtilsTest'/>
 			<test name='net.sf.briar.util.StringUtilsTest'/>
