--- a/test/build.xml
+++ b/test/build.xml
@@ -13,8 +13,8 @@
 				<path refid='test-classes'/>
 				<path refid='util-classes'/>
 			</classpath>
-			<test name='net.sf.briar.FileReadWriteTest'/>
 			<test name='net.sf.briar.LockFairnessTest'/>
+			<test name='net.sf.briar.ProtocolIntegrationTest'/>
 			<test name='net.sf.briar.crypto.CounterModeTest'/>
 			<test name='net.sf.briar.crypto.CryptoComponentTest'/>
 			<test name='net.sf.briar.crypto.SharedSecretTest'/>
