--- a/.classpath
+++ b/.classpath
@@ -20,7 +20,11 @@
 	<classpathentry kind="lib" path="lib/jna.jar"/>
 	<classpathentry kind="lib" path="lib/platform.jar"/>
 	<classpathentry kind="lib" path="lib/jnotify-0.93.jar"/>
-	<classpathentry kind="lib" path="lib/bluecove-2.1.0.jar"/>
-	<classpathentry kind="lib" path="lib/bluecove-gpl-2.1.0.jar"/>
+	<classpathentry kind="lib" path="lib/bluecove-2.1.1-SNAPSHOT.jar"/>
+	<classpathentry kind="lib" path="lib/bluecove-bluez-2.1.1-SNAPSHOT.jar"/>
+	<classpathentry kind="lib" path="lib/debug-disable.jar"/>
+	<classpathentry kind="lib" path="lib/hexdump.jar"/>
+	<classpathentry kind="lib" path="lib/libdbus-java-2.7.jar"/>
+	<classpathentry kind="lib" path="lib/unix.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
