--- a/.classpath
+++ b/.classpath
@@ -22,5 +22,6 @@
 	<classpathentry kind="lib" path="lib/bluecove-gpl-2.1.0.jar" sourcepath="lib/source/bluecove-gpl-2.1.0-sources.jar"/>
 	<classpathentry kind="lib" path="lib/bluecove-2.1.0-briar.jar" sourcepath="lib/source/bluecove-2.1.0-briar-sources.jar"/>
 	<classpathentry kind="lib" path="lib/h2small-1.3.161.jar"/>
+	<classpathentry kind="lib" path="lib/silvertunnel.org_netlib.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
