--- a/.classpath
+++ b/.classpath
@@ -13,7 +13,6 @@
 	<classpathentry kind="lib" path="lib/test/jmock-2.5.1.jar"/>
 	<classpathentry kind="lib" path="lib/commons-io-2.0.1.jar"/>
 	<classpathentry kind="lib" path="lib/test/junit-4.9b3.jar"/>
-	<classpathentry kind="lib" path="lib/bcprov-jdk15-146.jar" sourcepath="lib/source/bcprov-jdk15-146-src.zip"/>
 	<classpathentry kind="lib" path="lib/jna.jar"/>
 	<classpathentry kind="lib" path="lib/platform.jar"/>
 	<classpathentry kind="lib" path="lib/jnotify-0.93.jar"/>
@@ -21,5 +20,7 @@
 	<classpathentry kind="lib" path="lib/bluecove-2.1.0-briar.jar" sourcepath="lib/source/bluecove-2.1.0-briar-sources.jar"/>
 	<classpathentry kind="lib" path="lib/h2small-1.3.161.jar"/>
 	<classpathentry kind="lib" path="lib/silvertunnel.org_netlib.jar"/>
+	<classpathentry kind="lib" path="lib/sc-light-jdk15on-20120824.jar"/>
+	<classpathentry kind="lib" path="lib/scprov-jdk15on-20120824.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
