--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,64 +1,65 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="net.sf.briar"
-    android:versionCode="1"
-    android:versionName="1.0" >
+	package="net.sf.briar"
+	android:versionCode="1"
+	android:versionName="1.0" >
 
-    <uses-sdk android:minSdkVersion="7" android:targetSdkVersion="16" />
+	<uses-sdk android:minSdkVersion="7" android:targetSdkVersion="16" />
 
-    <uses-permission android:name="android.permission.BLUETOOTH" />
-    <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
-    <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
-    <uses-permission android:name="android.permission.CHANGE_WIFI_MULTICAST_STATE" />
+	<uses-permission android:name="android.permission.BLUETOOTH" />
+	<uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
+	<uses-permission android:name="android.permission.INTERNET" />
+	<uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+	<uses-permission android:name="android.permission.CHANGE_WIFI_MULTICAST_STATE" />
 
-    <application
-        android:icon="@drawable/ic_launcher"
-        android:label="@string/app_name" >
-        <service android:name=".HelloWorldService" android:exported="false" >
-            <intent-filter>
-                <action android:name=".HelloWorldService" />
-            </intent-filter>
-        </service>
-        <activity
-            android:name=".HelloWorldActivity"
-            android:label="@string/app_name" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
-        <activity
-            android:name=".android.invitation.NetworkSetupActivity"
-            android:label="@string/title" >
-        </activity>
-        <activity
-            android:name=".android.invitation.InvitationCodeActivity"
-            android:label="@string/title" >
-        </activity>
-        <activity
-            android:name=".android.invitation.ConnectionActivity"
-            android:label="@string/title" >
-        </activity>
-        <activity
-            android:name=".android.invitation.ConnectionFailedActivity"
-            android:label="@string/title" >
-        </activity>
-        <activity
-            android:name=".android.invitation.ConfirmationCodeActivity"
-            android:label="@string/title" >
-        </activity>
-        <activity
-            android:name=".android.invitation.WaitForContactActivity"
-            android:label="@string/title" >
-        </activity>
-        <activity
-            android:name=".android.invitation.CodesDoNotMatchActivity"
-            android:label="@string/title" >
-        </activity>
-        <activity
-            android:name=".android.invitation.ContactAddedActivity"
-            android:label="@string/title" >
-        </activity>
-    </application>
+	<application
+		android:theme="@android:style/Theme.Holo"
+		android:icon="@drawable/ic_launcher"
+		android:label="@string/app_name" >
+		<service android:name=".HelloWorldService" android:exported="false" >
+			<intent-filter>
+				<action android:name=".HelloWorldService" />
+			</intent-filter>
+		</service>
+		<activity
+			android:name=".HelloWorldActivity"
+			android:label="@string/app_name" >
+			<intent-filter>
+				<action android:name="android.intent.action.MAIN" />
+				<category android:name="android.intent.category.LAUNCHER" />
+			</intent-filter>
+		</activity>
+		<activity
+			android:name=".android.invitation.NetworkSetupActivity"
+			android:label="@string/title" >
+		</activity>
+		<activity
+			android:name=".android.invitation.InvitationCodeActivity"
+			android:label="@string/title" >
+		</activity>
+		<activity
+			android:name=".android.invitation.ConnectionActivity"
+			android:label="@string/title" >
+		</activity>
+		<activity
+			android:name=".android.invitation.ConnectionFailedActivity"
+			android:label="@string/title" >
+		</activity>
+		<activity
+			android:name=".android.invitation.ConfirmationCodeActivity"
+			android:label="@string/title" >
+		</activity>
+		<activity
+			android:name=".android.invitation.WaitForContactActivity"
+			android:label="@string/title" >
+		</activity>
+		<activity
+			android:name=".android.invitation.CodesDoNotMatchActivity"
+			android:label="@string/title" >
+		</activity>
+		<activity
+			android:name=".android.invitation.ContactAddedActivity"
+			android:label="@string/title" >
+		</activity>
+	</application>
 </manifest>
