--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -13,7 +13,7 @@
 	<uses-permission android:name="android.permission.CHANGE_WIFI_MULTICAST_STATE" />
 
 	<application
-		android:theme="@android:style/Theme.Holo"
+		android:theme="@android:style/Theme.Light"
 		android:icon="@drawable/ic_launcher"
 		android:label="@string/app_name" >
 		<service android:name=".HelloWorldService" android:exported="false" >
