--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -16,13 +16,15 @@
 		android:theme="@android:style/Theme.Light"
 		android:icon="@drawable/ic_launcher"
 		android:label="@string/app_name" >
-		<service android:name=".HelloWorldService" android:exported="false" >
+		<service
+			android:name=".android.helloworld.HelloWorldService"
+			android:exported="false" >
 			<intent-filter>
-				<action android:name=".HelloWorldService" />
+				<action android:name="net.sf.briar.android.helloworld.HelloWorldService" />
 			</intent-filter>
 		</service>
 		<activity
-			android:name=".HelloWorldActivity"
+			android:name=".android.helloworld.HelloWorldActivity"
 			android:label="@string/app_name" >
 			<intent-filter>
 				<action android:name="android.intent.action.MAIN" />
@@ -31,35 +33,35 @@
 		</activity>
 		<activity
 			android:name=".android.invitation.NetworkSetupActivity"
-			android:label="@string/title" >
+			android:label="@string/add_a_contact" >
 		</activity>
 		<activity
 			android:name=".android.invitation.InvitationCodeActivity"
-			android:label="@string/title" >
+			android:label="@string/add_a_contact" >
 		</activity>
 		<activity
 			android:name=".android.invitation.ConnectionActivity"
-			android:label="@string/title" >
+			android:label="@string/add_a_contact" >
 		</activity>
 		<activity
 			android:name=".android.invitation.ConnectionFailedActivity"
-			android:label="@string/title" >
+			android:label="@string/add_a_contact" >
 		</activity>
 		<activity
 			android:name=".android.invitation.ConfirmationCodeActivity"
-			android:label="@string/title" >
+			android:label="@string/add_a_contact" >
 		</activity>
 		<activity
 			android:name=".android.invitation.WaitForContactActivity"
-			android:label="@string/title" >
+			android:label="@string/add_a_contact" >
 		</activity>
 		<activity
 			android:name=".android.invitation.CodesDoNotMatchActivity"
-			android:label="@string/title" >
+			android:label="@string/add_a_contact" >
 		</activity>
 		<activity
 			android:name=".android.invitation.ContactAddedActivity"
-			android:label="@string/title" >
+			android:label="@string/add_a_contact" >
 		</activity>
 	</application>
 </manifest>
