--- a/briar-android/.classpath
+++ b/briar-android/.classpath
@@ -5,5 +5,6 @@
 	<classpathentry kind="con" path="com.android.ide.eclipse.adt.ANDROID_FRAMEWORK"/>
 	<classpathentry kind="con" path="com.android.ide.eclipse.adt.LIBRARIES"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/briar-core"/>
+	<classpathentry kind="lib" path="/briar-core/libs/guice-3.0-no_aop.jar"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
