Fixed ant build files for Android project.

--- a/briar-android/ant.properties
+++ b/briar-android/ant.properties
@@ -9,6 +9,9 @@
 #  'source.dir' for the location of your java source folder and
 #  'out.dir' for the location of your output folder.
 
+source.dir=src:../briar-core/src
+external.libs.dir=../briar-core/libs
+
 # You can also use it define how the release builds are signed by declaring
 # the following properties:
 #  'key.store' for the location of your keystore and
