Updated ant build files for multi-project structure.

--- a/briar-api/build.xml
+++ b/briar-api/build.xml
@@ -1,20 +1,19 @@
 <project name='briar-api' default='compile'>
-	<fileset id='api-jars' dir='../libs'>
+	<fileset id='api-jars' dir='libs'>
 		<include name='*.jar'/>
 	</fileset>
 	<path id='api-classes'>
-		<pathelement location='../build'/>
+		<pathelement location='build'/>
 	</path>
 	<target name='clean'>
-		<delete dir='../build'/>
+		<delete dir='build'/>
 	</target>
 	<target name='compile'>
-		<mkdir dir='../build'/>
-		<javac srcdir='.' destdir='../build' source='1.5'
+		<mkdir dir='build'/>
+		<javac srcdir='src' destdir='build' source='1.5'
 			includeantruntime='false' debug='off'>
 			<classpath>
 				<fileset refid='api-jars'/>
-				<path refid='api-classes'/>
 			</classpath>
 		</javac>
 	</target>
