--- a/briar-android/ant.properties
+++ b/briar-android/ant.properties
@@ -9,8 +9,9 @@
 #  'source.dir' for the location of your java source folder and
 #  'out.dir' for the location of your output folder.
 
-source.dir=src:../briar-core/src
-external.libs.dir=../briar-core/libs
+source.dir=../briar-api/src:../briar-core/src:src
+api.jar.libs.dir=../briar-api/libs
+core.jar.libs.dir=../briar-core/libs
 
 # You can also use it define how the release builds are signed by declaring
 # the following properties:
