--- a/briar-core/build.xml
+++ b/briar-core/build.xml
@@ -1,28 +1,28 @@
 <project name='briar-core' default='compile'>
-	<fileset id='api-jars' dir='../../briar-api/libs'>
+	<fileset id='api-jars' dir='../briar-api/libs'>
 		<include name='*.jar'/>
 	</fileset>
-	<fileset id='core-jars' dir='../libs'>
+	<fileset id='core-jars' dir='libs'>
 		<include name='*.jar'/>
 	</fileset>
 	<path id='api-classes'>
-		<pathelement location='../../briar-api/build'/>
+		<pathelement location='../briar-api/build'/>
 	</path>
 	<target name='clean'>
-		<delete dir='../../briar-api/build'/>
-		<delete dir='../build'/>
+		<delete dir='../briar-api/build'/>
+		<delete dir='build'/>
 	</target>
 	<target name='compile'>
-		<mkdir dir='../../briar-api/build'/>
-		<javac srcdir='../../briar-api/src'
-			destdir='../../briar-api/build' source='1.5'
+		<mkdir dir='../briar-api/build'/>
+		<javac srcdir='../briar-api/src'
+			destdir='../briar-api/build' source='1.5'
 			includeantruntime='false' debug='off'>
 			<classpath>
 				<fileset refid='api-jars'/>
 			</classpath>
 		</javac>
-		<mkdir dir='../build'/>
-		<javac srcdir='.' destdir='../build' source='1.5'
+		<mkdir dir='build'/>
+		<javac srcdir='src' destdir='build' source='1.5'
 			includeantruntime='false' debug='off'>
 			<classpath>
 				<fileset refid='core-jars'/>
